--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <a href="https://www.hashtagkalakar.net/post/the-end-of-a-planet" class="button button6">The End of a Planet</a>
     <a href="https://www.hashtagkalakar.net/post/friendship-and-trust" class="button button7">Friendship and Trust</a>
     <a href="https://www.hashtagkalakar.net/post/an-extrovert-s-transition" class="button button8">An Extrovert's Transition</a>
+    
+    <a href="https://www.hashtagkalakar.net/post/friendship-and-trust" class="button button7">Goodbye, friend</a>
+    <a href="https://www.hashtagkalakar.net/post/an-extrovert-s-transition" class="button button8">Farewell</a>
   </div>
 </body>
 </html>
